--- a/src/aura/KanbanBoard/KanbanBoard.cmp
+++ b/src/aura/KanbanBoard/KanbanBoard.cmp
@@ -2,9 +2,16 @@
  - Created by Vladyslav Lyfar on 04.10.2018.
  -->
 
-<aura:component description="KanbanBoard">
+<aura:component description="KanbanBoard" controller="KanbanBoardController"
+                implements="lightning:actionOverride, force:hasRecordId">
+    <aura:handler name="init" value="{!this}" action="{!c.doInit}"/>
+
+    <aura:attribute name="recordId" type="Id" />
+    <aura:attribute name="kanbanColumnList" type="KanbanColumn__c[]"/>
+
     <div>
-        <c:KanbanBoardInfo/>
-        <c:KanbanColumnList/>
+        <c:KanbanBoardInfo />
+        <c:KanbanColumnList kanbanColumnList = "{! v.kanbanColumnList }"
+                            kanbanBoardId="{! v.recordId }" />
     </div>
 </aura:component>
