--- a/src/aura/KanbanCard/KanbanCard.cmp
+++ b/src/aura/KanbanCard/KanbanCard.cmp
@@ -8,7 +8,7 @@
     <lightning:overlayLibrary aura:id="overlayLib"/>
 
     <div class="slds-is-relative">
-        <button onclick="{! c.handleShowModal}" class="slds-card KanbanCard__btn">
+        <button onclick="{! c.showKanbanCardDetails }" class="slds-card KanbanCard__btn">
             <span class="slds-p-around_medium">{! v.kanbanCard.Name }</span>
         </button>
         <lightning:buttonMenu class="slds-is-absolute KanbanCard__menu-trigger" aura:id="menu" onselect="{! c.handleSelect }" alternativeText="Show menu">
