--- a/src/aura/KanbanColumn/KanbanColumn.css
+++ b/src/aura/KanbanColumn/KanbanColumn.css
@@ -16,3 +16,9 @@
     align-items: center;
     justify-content: space-between;
 }
+.THIS .slds-form-element__label {
+    display: none;
+}
+.THIS .slds-button-group-row {
+    margin-top: .5rem;
+}
