--- a/src/aura/KanbanColumn/KanbanColumn.cmp
+++ b/src/aura/KanbanColumn/KanbanColumn.cmp
@@ -4,6 +4,8 @@
 
 <aura:component description="KanbanColumn" controller="KanbanColumnController">
     <aura:handler name="init" value="{!this}" action="{!c.doInit}"/>
+    <aura:handler name="UpdateKanbanColumnBoardEvent" event="c:UpdateKanbanColumnBoardEvent"
+                  action="{! c.handleUpdateKanbanColumnBoardEvent }"/>
 
     <aura:attribute name="kanbanColumn" type="KanbanColumn__c" />
     <aura:attribute name="kanbanCards" type="KanbanCard__c[]"/>
@@ -28,12 +30,18 @@
                 </div>
             </aura:if>
 
-            <lightning:buttonMenu aura:id="menu" onselect="{! c.selectAction }" alternativeText="Show menu">
-                <lightning:menuItem value="copyList" label="Copy list..." />
-                <lightning:menuItem value="moveList" label="Move list..." />
-                <lightning:menuItem value="moveAllCards" label="Move all cards..." />
-                <lightning:menuItem value="sortBy" label="Sort by..." />
-            </lightning:buttonMenu>
+            <div class="slds-is-relative">
+                <lightning:buttonMenu aura:id="menu" onselect="{! c.selectAction }" alternativeText="Show menu">
+                    <lightning:menuItem value="copyList" disabled="true" label="Copy list..." />
+                    <lightning:menuItem value="moveList" label="Move list..." />
+                    <lightning:menuItem value="moveAllCards" label="Move all cards..." />
+                    <lightning:menuItem value="sortBy" disabled="true" label="Sort by..." />
+                </lightning:buttonMenu>
+
+                <c:moveKanbanColumnForm aura:id="customPopover" />
+                <c:moveAllKanbanCardsForm aura:id="customPopover1" />
+
+            </div>
 
         </div>
 
