--- a/src/aura/customPopover/customPopover.cmp
+++ b/src/aura/customPopover/customPopover.cmp
@@ -2,31 +2,15 @@
  - Created by Vladyslav Lyfar on 09.10.2018.
  -->
 
-<aura:component description="customPopover" controller="KanbanBoardController">
-    <aura:handler name="init" value="{!this}" action="{!c.doInit}"/>
+<aura:component extensible="true" description="customPopover">
 
-    <aura:attribute name="kanbanBoards" type="KanbanBoard__c[]" />
-    <aura:attribute name="kanbanColumns" type="KanbanColumn__c[]" />
+    <aura:attribute name="position" type="String"/>
 
-    <lightning:layout class="slds-box--border">
-        <div>
-            <lightning:select aura:id="selectBoard" name="selectBoard" label="Choose board" onchange="{! c.selectKanbanBoard }" required="true">
-                <aura:iteration items="{! v.kanbanBoards }" var="board">
-                    <option text="{! board.Name }" value="{! board.Id }" selected="" />
-                </aura:iteration>
-            </lightning:select>
-        </div>
-        <div>
-            <lightning:select name="select" label="Choose column" required="true">
-                <aura:iteration items="{!v.kanbanColumns}" var="column">
-                    <option text="{! column.Name }" selected=""/>
-                </aura:iteration>
-            </lightning:select>
-        </div>
-        <div class="slds-button-group-row">
-            <lightning:button disabled="{! v.newKanbanCard.Name == ''}" variant="success" onclick="{! c.createNewCard }" label="Move" />
-            <lightning:button variant="destructive" label="Cancel" />
-        </div>
+    <lightning:layout class="slds-box--border slds-is-absolute" aura:id="customPopover">
+        <lightning:buttonIcon iconName="utility:close" class="slds-is-absolute customPopover__close-btn"
+                              variant="bare" onclick="{! c.togglePopover }" alternativeText="Close" />
+        {! v.body }
+
     </lightning:layout>
 
 </aura:component>
