--- a/src/aura/KanbanColumn/KanbanColumn.cmp
+++ b/src/aura/KanbanColumn/KanbanColumn.cmp
@@ -34,7 +34,7 @@
                 <lightning:buttonMenu aura:id="menu" onselect="{! c.selectAction }" alternativeText="Show menu">
                     <lightning:menuItem value="copyList" disabled="true" label="Copy list..." />
                     <lightning:menuItem value="moveList" label="Move list..." />
-                    <lightning:menuItem value="moveAllCards" label="Move all cards..." />
+                    <lightning:menuItem value="moveAllCards" disabled="true" label="Move all cards..." />
                     <lightning:menuItem value="sortBy" disabled="true" label="Sort by..." />
                 </lightning:buttonMenu>
 
