--- a/src/aura/copyKanbanCardForm/copyKanbanCardForm.cmp
+++ b/src/aura/copyKanbanCardForm/copyKanbanCardForm.cmp
@@ -40,6 +40,6 @@
     <div class="slds-button-group-row">
         <lightning:button disabled="{! v.kanbanColumns.length == 0 }" variant="success"
                           onclick="{! c.copyKanbanCard }" label="Copy"/>
-        <lightning:button variant="destructive" label="Cancel"/>
+        <lightning:button variant="destructive" onclick="{! c.cancelForm }" label="Cancel"/>
     </div>
 </aura:component>
