--- a/src/aura/KanbanBoard/KanbanBoard.cmp
+++ b/src/aura/KanbanBoard/KanbanBoard.cmp
@@ -4,6 +4,7 @@
 
 <aura:component description="KanbanBoard" controller="KanbanBoardController"
                 implements="lightning:actionOverride, force:hasRecordId">
+    <aura:registerEvent type="c:ShareKanbanColumnsEvent" name="ShareKanbanColumnsEvent"/>
 
     <aura:handler name="init" value="{!this}" action="{!c.doInit}"/>
     <aura:handler name="RenameKanbanBoardEvent" action="{! c.handleRenameKanbanBoardEvent }"
