--- a/src/aura/moveAllKanbanCardsForm/moveAllKanbanCardsForm.cmp
+++ b/src/aura/moveAllKanbanCardsForm/moveAllKanbanCardsForm.cmp
@@ -3,6 +3,9 @@
  -->
 
 <aura:component description="moveAllKanbanCardsForm" extends="c:customPopover">
+    <aura:registerEvent name="MoveAllKanbanCardsEvent" type="c:MoveAllKanbanCardsEvent" />
+
+    <aura:handler event="c:ShareKanbanColumnsEvent" action="{!c.handleShareKanbanColumnsEvent}"/>
 
     <aura:attribute name="kanbanColumns" type="KanbanColumn__c[]"/>
 
@@ -16,7 +19,9 @@
     </div>
     <div class="slds-button-group-row">
         <lightning:button variant="success"
-                          onclick="{! c.updateKanbanColumnBoard }" label="Move"/>
-        <lightning:button variant="destructive" label="Cancel"/>
+                          onclick="{! c.moveAllCardsToOtherColumn }" label="Move"/>
+        <lightning:button variant="destructive"
+                          onclick="{! c.cancelForm }"
+                          label="Cancel"/>
     </div>
 </aura:component>
