--- a/src/aura/KanbanCard/KanbanCard.cmp
+++ b/src/aura/KanbanCard/KanbanCard.cmp
@@ -6,12 +6,17 @@
     <aura:attribute name="kanbanCard" type="KanbanCard__c"/>
 
     <aura:registerEvent name="OnDeleteKanbanCardEvent" type="c:OnDeleteKanbanCardEvent"/>
+    <aura:registerEvent name="OnCopyKanbanCardEvent" type="c:OnCopyKanbanCardEvent"/>
+    <aura:registerEvent name="OnMoveKanbanCardEvent" type="c:OnMoveKanbanCardEvent"/>
 
-    <aura:handler name="CreateNewCardEvent" event="c:CreateNewCardEvent" action="{! c.handleCreateNewCardEvent }"/>
+    <aura:handler name="CreateNewCardEvent" event="c:CreateNewCardEvent"
+                  action="{! c.handleCreateNewCardEvent }"/>
     <aura:handler name="UpdateKanbanCardColumnEvent" event="c:UpdateKanbanCardColumnEvent"
                   action="{! c.handleUpdateKanbanCardColumnEvent }"/>
     <aura:handler name="CopyKanbanCardEvent" event="c:CopyKanbanCardEvent"
                   action="{! c.handleCopyKanbanCardEvent }"/>
+    <aura:handler name="MoveKanbanCardEvent" event="c:MoveKanbanCardEvent"
+                  action="{! c.handleMoveKanbanCardEvent }"/>
 
     <lightning:overlayLibrary aura:id="overlayLib"/>
 
