--- a/src/aura/KanbanColumn/KanbanColumn.cmp
+++ b/src/aura/KanbanColumn/KanbanColumn.cmp
@@ -10,6 +10,11 @@
     <aura:registerEvent name="OnDeleteKanbanColumnEvent" type="c:OnDeleteKanbanColumnEvent"/>
     <aura:registerEvent name="OnCopyKanbanColumnEvent" type="c:OnCopyKanbanColumnEvent"/>
     <aura:registerEvent name="OnMoveKanbanColumnEvent" type="c:OnMoveKanbanColumnEvent"/>
+    <aura:registerEvent name="OnMoveAllKanbanCardsEvent" type="c:OnMoveAllKanbanCardsEvent"/>
+
+    <aura:method name="appendCardsToColumn" action="{! c.appendCards }">
+        <aura:attribute name="kanbanCards" type="KanbanCard__c[]"/>
+    </aura:method>
 
     <aura:handler name="init" value="{!this}" action="{!c.doInit}"/>
     <aura:handler name="UpdateKanbanColumnBoardEvent" event="c:UpdateKanbanColumnBoardEvent"
@@ -18,6 +23,10 @@
                   action="{! c.handleCopyKanbanColumnEvent }"/>
     <aura:handler name="MoveAllKanbanCardsEvent" event="c:MoveAllKanbanCardsEvent"
                   action="{! c.handleMoveAllKanbanCardsEvent }"/>
+    <aura:handler name="OnCopyKanbanCardEvent" event="c:OnCopyKanbanCardEvent"
+                  action="{! c.handleOnCopyKanbanCardEvent }"/>
+    <aura:handler name="OnMoveKanbanCardEvent" event="c:OnMoveKanbanCardEvent"
+                  action="{! c.handleOnMoveKanbanCardEvent }"/>
 
     <div class="slds-box">
         <div class="KanbanColumn__header KanbanColumn__header--flex">
