--- a/src/aura/moveKanbanCardForm/moveKanbanCardForm.cmp
+++ b/src/aura/moveKanbanCardForm/moveKanbanCardForm.cmp
@@ -13,6 +13,7 @@
     <div>
         <lightning:select aura:id="selectBoard" name="selectBoard" label="Choose board"
                           onchange="{! c.selectKanbanBoard }" required="true">
+            <option text="Select board" disabled="true" value="" selected="true"/>
             <aura:iteration items="{! v.kanbanBoards }" var="board">
                 <option text="{! board.Name }" value="{! board.Id }" selected=""/>
             </aura:iteration>
